syntax = "proto3";

package helloService;

import "hello.proto";


service HelloService {
  rpc multiHello (stream HelloRequest) returns (MultiHelloResponse) {}
  rpc batchHello (stream HelloRequest) returns (stream HelloResponse) {}
}

message HelloRequest {
  hello.Hello hello = 1;
}

message MultiHelloResponse {
  string title = 1;
  repeated hello.Hello greetings = 2;
}

message HelloResponse {
  string text = 1;
}
